🚀 fix: Edit record not showing up when clicked

--- a/web/style.css
+++ b/web/style.css
@@ -48,7 +48,6 @@
     animation-delay: 0.4s;
     -o-animation-delay: 0.4s;
     -webkit-animation-delay: 0.4s;
-    -webkit-animation-delay: 0.4s;
 }
 
 #load div:nth-child(4) {
